--- a/pages/index.html
+++ b/pages/index.html
@@ -15,11 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Custom CSS Files -->
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/layout.css">
-    <link rel="stylesheet" href="../css/theme.css">
-    <link rel="stylesheet" href="../css/components.css">
-    <link rel="stylesheet" href="../css/pages/home.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/components.css">
+    <link rel="stylesheet" href="/css/pages/home.css">
 </head>
 <body>
     <!-- Placeholders for components -->
@@ -37,7 +37,7 @@
 
     <!-- JavaScript Files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/utils.js"></script>
+    <script src="/js/utils.js"></script>
 
     <script>
         // Simple component loader
@@ -54,9 +54,9 @@
 
         // Load all components when page is ready
         document.addEventListener('DOMContentLoaded', function() {
-            loadComponent('../components/header.html', 'header-container');
-            loadComponent('../components/navbar.html', 'navbar-container');
-            loadComponent('../components/footer.html', 'footer-container');
+            loadComponent('/components/header.html', 'header-container');
+            loadComponent('/components/navbar.html', 'navbar-container');
+            loadComponent('/components/footer.html', 'footer-container');
 
             // Load featured products
             loadFeaturedProducts();
