--- a/public/index.html
+++ b/public/index.html
@@ -39,61 +39,57 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utils.js"></script>
 
-    <script>
+    <!-- Module script for Supabase API -->
+    <script type="module">
+        import { getProducts } from '/js/api/products.js'
+
         // Simple component loader
         async function loadComponent(componentPath, containerId) {
             try {
-                const response = await fetch(componentPath);
-                const html = await response.text();
-                document.getElementById(containerId).innerHTML = html;
+                const response = await fetch(componentPath)
+                const html = await response.text()
+                document.getElementById(containerId).innerHTML = html
             } catch (error) {
-                console.error('Error loading component:', error);
-                document.getElementById(containerId).innerHTML = '<p>Error loading component</p>';
+                console.error('Error loading component:', error)
+                document.getElementById(containerId).innerHTML = '<p>Error loading component</p>'
             }
         }
 
-        // Load all components when page is ready
-        document.addEventListener('DOMContentLoaded', function() {
-            loadComponent('/components/header.html', 'header-container');
-            loadComponent('/components/navbar.html', 'navbar-container');
-            loadComponent('/components/footer.html', 'footer-container');
-
-            // Load featured products
-            loadFeaturedProducts();
-        });
-
-        // Mock function to load featured products
+        // Load featured products from Supabase
         async function loadFeaturedProducts() {
-            const productsContainer = document.getElementById('featured-products');
-            
-            // Mock products data
-            const featuredProducts = [
-                { id: 1, name: "Wireless Headphones", price: 99.99, image: "https://via.placeholder.com/300x200/007bff/ffffff?text=Headphones", category: "Electronics" },
-                { id: 2, name: "Smart Watch", price: 199.99, image: "https://via.placeholder.com/300x200/28a745/ffffff?text=Smart+Watch", category: "Electronics" },
-                { id: 3, name: "Running Shoes", price: 79.99, image: "https://via.placeholder.com/300x200/dc3545/ffffff?text=Running+Shoes", category: "Sports" },
-                { id: 4, name: "Backpack", price: 49.99, image: "https://via.placeholder.com/300x200/ffc107/000000?text=Backpack", category: "Fashion" }
-            ];
+            const productsContainer = document.getElementById('featured-products')
+            const featuredProducts = await getProducts()
 
-            // Display products
             featuredProducts.forEach(product => {
+                const mainImage = product.product_images?.find(img => img.is_main)?.image_url || 'https://via.placeholder.com/300x200'
+                const categories = product.product_categories?.map(c => c.category_id).join(', ') || 'Uncategorized'
+
                 const productHTML = `
                     <div class="col-md-3 col-sm-6 mb-4">
                         <div class="card h-100 shadow-sm">
-                            <img src="${product.image}" class="card-img-top" alt="${product.name}" style="height: 200px; object-fit: cover;">
+                            <img src="${mainImage}" class="card-img-top" alt="${product.name_en}" style="height: 200px; object-fit: cover;">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">${product.name}</h5>
-                                <p class="card-text text-muted">${product.category}</p>
+                                <h5 class="card-title">${product.name_en}</h5>
+                                <p class="card-text text-muted">Categories: ${categories}</p>
                                 <div class="mt-auto">
-                                    <p class="h5 text-primary mb-2">$${product.price}</p>
+                                    <p class="h5 text-primary mb-2">$${product.offer_percentage ? product.offer_percentage : 0}</p>
                                     <button class="btn btn-primary btn-sm w-100">Add to Cart</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                `;
-                productsContainer.innerHTML += productHTML;
-            });
+                `
+                productsContainer.innerHTML += productHTML
+            })
         }
+
+        // Load components and products when page is ready
+        document.addEventListener('DOMContentLoaded', function() {
+            loadComponent('/components/header.html', 'header-container')
+            loadComponent('/components/navbar.html', 'navbar-container')
+            loadComponent('/components/footer.html', 'footer-container')
+            loadFeaturedProducts()
+        })
     </script>
 </body>
 </html>
